syntax = "proto3";

option csharp_namespace = "MedicalRecordService";

service GrpcAppointment{
  rpc GetAllAppointments(GrpcAppointmentEmpty) returns (stream GrpcAppointmentResponse);
}

message GrpcAppointmentEmpty
{
}

message GrpcAppointmentResponse{
  int32 appointmentId = 1;
  int32 patientId = 2;
  int32 doctorId = 3;
  string status = 4;
  string reason = 5;
}