syntax = "proto3";

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "MedicalRecordService";

service GrpcPatient{
  rpc GetAllPatients(GrpcEmptyRequest) returns (stream GrpcPatientResponse);
}
message GrpcEmptyRequest{

}

message GrpcPatientResponse{
  int32 patientId = 1;
  string firstName = 2;
  string lastName = 3;
  string middleName = 4;
  string phoneNumber = 5;
}
